added link to laptop-code

--- a/extension.html
+++ b/extension.html
@@ -24,7 +24,9 @@
           ver. 0.0.1
       </div>
       <div class="codeicon">
-          <i class="fas fa-laptop-code"></i> <!-- using an <i> element to reference the icon -->
+          <a href="http://www.github.com/michaelpeterswa/AdExaminer" target="_blank">
+              <i class="fas fa-laptop-code"></i> <!-- using an <i> element to reference the icon -->
+          </a>
     <div>
 
   </body>
